# fantasma

./: .gitignore  .mintignore  AGENTS.md  Cargo.toml  Package.swift  README.md  docs.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  performance.yml
apps/dashboard-web/: README.md
apps/dashboard-web/public/: index.html
apps/demo-android/: README.md  build.gradle.kts
apps/demo-ios/: README.md
apps/demo-ios/FantasmaDemo/: ContentView.swift  FantasmaDemoApp.swift
apps/demo-ios/FantasmaDemo.xcodeproj/: project.pbxproj
artifacts/performance/2026-03-13-dim4-impact-full-r2/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-m3-pro-heavy/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-repair-bind-follow-up/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-repair-event-ready-batch-fix/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-repair-event-ready-batch-fix-large/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-session-append-delta/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-session-append-delta-large/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-session-freshness-smoke/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-session-reads/: host.json  summary.json  summary.md
artifacts/performance/2026-03-13-session-repair-and-reads/: host.json  summary.json  summary.md
artifacts/performance/2026-03-14-session-apply-repair-split-promote-candidate/: host.json  summary.json  summary.md
artifacts/performance/2026-03-14-session-freshness-promoted-defaults/: host.json  summary.json  summary.md
artifacts/performance/2026-03-14-session-freshness-promoted-defaults-r2/: host.json  summary.json  summary.md
artifacts/performance/2026-03-17-active-install-range-family/: summary.json  summary.md
artifacts/performance/2026-03-17-range-active-installs/: summary.json  summary.md
artifacts/performance/2026-03-17-range-active-installs-read-ranges/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-mixed/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-reads30/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-recovery-mixed/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-recovery-reads30/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-recovery-representative/: summary.json  summary.md
artifacts/performance/2026-03-17-session-d4-representative/: summary.json  summary.md
artifacts/performance/2026-03-17-unified-d2-mixed/: summary.json  summary.md
artifacts/performance/2026-03-17-unified-d2-reads30/: summary.json  summary.md
artifacts/performance/2026-03-17-unified-d2-reads30-fixed/: summary.json  summary.md
artifacts/performance/2026-03-17-unified-d2-representative/: summary.json  summary.md
artifacts/performance/2026-03-25-phase3-rebuild-from-c27-final-v2/: summary.json  summary.md
artifacts/performance/2026-03-26-2453846-exact-stack-rerun/: summary.json  summary.md
artifacts/performance/2026-03-26-apply-lane-offset-lock-test-hardening-rerun/: summary.json  summary.md
crates/fantasma-api/: Cargo.toml
crates/fantasma-api/src/: http.rs  main.rs
crates/fantasma-api/tests/: auth.rs
crates/fantasma-auth/: Cargo.toml
crates/fantasma-bench/: Cargo.toml
crates/fantasma-bench/baselines/: slo-iterative-default.json
crates/fantasma-bench/budgets/: ci.json
crates/fantasma-bench/src/: main.rs
crates/fantasma-cli/: Cargo.toml
crates/fantasma-cli/src/: app.rs  cli.rs  config.rs  main.rs
crates/fantasma-cli/tests/: cli_config.rs  http_flows.rs
crates/fantasma-core/: Cargo.toml
crates/fantasma-ingest/: Cargo.toml
crates/fantasma-store/: Cargo.toml
crates/fantasma-store/migrations/: 0001_initial.sql  0002_session_daily.sql  0003_install_session_state.sql  0004_session_daily_installs.sql  0005_event_metrics_rollups.sql  0006_remove_legacy_identity_columns.sql  0007_event_metrics_read_indexes.sql  0008_scoped_project_api_keys.sql  0009_bucketed_metrics_api.sql  0010_install_session_progress.sql  0011_session_rebuild_queue.sql  0012_event_metric_dim4_cleanup.sql  0013_session_repair_jobs.sql  0014_session_daily_installs_rebuild_queue.sql  0015_session_metric_dim4.sql  0016_session_active_install_membership.sql  0017_active_install_range_metrics.sql  0018_live_installs.sql  0019_active_install_daily_bitmaps.sql  0020_project_deletions_and_fencing.sql  0021_four_builtin_metric_cubes.sql  0022_device_dimension_and_macos_platform.sql  0023_deferred_projection_rebuild_queues.sql
crates/fantasma-store/src/: lib.rs
crates/fantasma-worker/: Cargo.toml
crates/fantasma-worker/src/: lib.rs  main.rs  scheduler.rs  sessionization.rs  worker.rs
crates/fantasma-worker/tests/: pipeline.rs
docs/: STATUS.md  architecture.md  deployment.md  performance.md  verification.md
infra/docker/: Dockerfile.api  Dockerfile.ingest  Dockerfile.test  Dockerfile.worker  compose.bench.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml
mintlify/: android-sdk.mdx  flutter-sdk.mdx  index.mdx  ios-sdk.mdx  react-native-sdk.mdx  sdk-behavior.mdx  usefantasma.mdx
schemas/events/: event-batch.schema.json  mobile-event.schema.json
schemas/openapi/: fantasma.yaml
scripts/: bootstrap-host-checkout.sh  cli-smoke.sh  compose-smoke.sh  demo-stack-burst-bench.py  deploy-host.sh  docker-reclaim.sh  docker-test.sh  provision-project.sh  run-demo-stack-burst-bench.sh  verify-changed-surface.sh
scripts/ci/: should-run-cli-smoke.sh
scripts/tests/: cli-dogfood-gate.sh  cli-smoke-portability.sh  dead-flow-audit.sh  docker-disk-footprint.sh  git-backed-deploy-scripts.sh  mintlify-docs-audit.sh  prod-proxy-compose.sh  verify-changed-surface-audit.sh
sdks/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdks/flutter/: README.md
sdks/ios/: README.md
sdks/ios/FantasmaSDK/: README.md  (+1 more)
sdks/react-native/: README.md
(+734 files in other folders)
