[workspace]
members = [
  "crates/fantasma-api",
  "crates/fantasma-auth",
  "crates/fantasma-core",
  "crates/fantasma-ingest",
  "crates/fantasma-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/RuiAAPeres/fantasma"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["json", "query"] }
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
