[package]
name = "fantasma-api"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
fantasma-auth = { path = "../fantasma-auth" }
fantasma-core = { path = "../fantasma-core" }
http.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
