[package]
name = "fantasma-api"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
fantasma-auth = { path = "../fantasma-auth" }
fantasma-core = { path = "../fantasma-core" }
fantasma-store = { path = "../fantasma-store" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml = "0.9"
tower = "0.5.2"
