[package]
name = "fantasma-api"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
fantasma-auth = { path = "../fantasma-auth" }
fantasma-core = { path = "../fantasma-core" }
fantasma-store = { path = "../fantasma-store" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
fantasma-ingest = { path = "../fantasma-ingest" }
serde_yaml = "0.9"
tower = "0.5.2"
