[package]
name = "fantasma-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "fantasma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
fantasma-core = { path = "../fantasma-core" }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.7"
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3.23.0"
