[package]
name = "fantasma-store"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
fantasma-auth = { path = "../fantasma-auth" }
fantasma-core = { path = "../fantasma-core" }
roaring = "0.11.3"
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }
