[package]
name = "fantasma-worker"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
fantasma-core = { path = "../fantasma-core" }
fantasma-store = { path = "../fantasma-store" }
roaring = "0.11.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum.workspace = true
fantasma-api = { path = "../fantasma-api" }
fantasma-auth = { path = "../fantasma-auth" }
fantasma-ingest = { path = "../fantasma-ingest" }
http.workspace = true
tower = { version = "0.5.2", features = ["util"] }
